[gd_scene load_steps=16 format=2]

[ext_resource path="res://Assets/战斗场景/逍遥客栈.png" type="Texture" id=1]
[ext_resource path="res://V1.0/Beacon.tscn" type="PackedScene" id=2]
[ext_resource path="res://V1.0/BattleGUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://V2.0/BattleStateMachine.gd" type="Script" id=4]
[ext_resource path="res://V2.0/Asleep.gd" type="Script" id=5]
[ext_resource path="res://V2.0/Player1Turn.gd" type="Script" id=6]
[ext_resource path="res://V2.0/Player3Turn.gd" type="Script" id=7]
[ext_resource path="res://V2.0/Setup.gd" type="Script" id=8]
[ext_resource path="res://V2.0/Player2Turn.gd" type="Script" id=9]
[ext_resource path="res://V2.0/PlayerCast.gd" type="Script" id=10]
[ext_resource path="res://V2.0/EnemyTurn.gd" type="Script" id=11]
[ext_resource path="res://V2.0/RunAway.gd" type="Script" id=12]
[ext_resource path="res://V2.0/Win.gd" type="Script" id=13]
[ext_resource path="res://V2.0/Lose.gd" type="Script" id=14]
[ext_resource path="res://V2.0/BattleField.gd" type="Script" id=15]

[node name="BattleField" type="Node2D"]
script = ExtResource( 15 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 512, 304 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="Player1" type="Position2D" parent="YSort"]
position = Vector2( 560, 404 )

[node name="Player2" type="Position2D" parent="YSort"]
position = Vector2( 608, 384 )

[node name="Player3" type="Position2D" parent="YSort"]
position = Vector2( 656, 356 )

[node name="Enemy1" type="Position2D" parent="YSort"]
position = Vector2( 512, 308 )

[node name="Enemy2" type="Position2D" parent="YSort"]
position = Vector2( 416, 320 )

[node name="Enemy3" type="Position2D" parent="YSort"]
position = Vector2( 368, 356 )

[node name="Enemy4" type="Position2D" parent="YSort"]
position = Vector2( 320, 332 )

[node name="Enemy5" type="Position2D" parent="YSort"]
position = Vector2( 384, 288 )

[node name="Enemy6" type="Position2D" parent="YSort"]
position = Vector2( 456, 272 )

[node name="Beacon" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.6, 0.6 )
frame = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
zoom = Vector2( 0.5, 0.5 )

[node name="BattleGUI" parent="." instance=ExtResource( 3 )]

[node name="BattleStateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Asleep" type="Node" parent="BattleStateMachine"]
script = ExtResource( 5 )

[node name="Setup" type="Node" parent="BattleStateMachine"]
script = ExtResource( 8 )

[node name="Player1Turn" type="Node" parent="BattleStateMachine"]
script = ExtResource( 6 )

[node name="Player2Turn" type="Node" parent="BattleStateMachine"]
script = ExtResource( 9 )

[node name="Player3Turn" type="Node" parent="BattleStateMachine"]
script = ExtResource( 7 )

[node name="PlayerCast" type="Node" parent="BattleStateMachine"]
script = ExtResource( 10 )

[node name="EnemyTurn" type="Node" parent="BattleStateMachine"]
script = ExtResource( 11 )

[node name="Win" type="Node" parent="BattleStateMachine"]
script = ExtResource( 13 )

[node name="Lose" type="Node" parent="BattleStateMachine"]
script = ExtResource( 14 )

[node name="RunAway" type="Node" parent="BattleStateMachine"]
script = ExtResource( 12 )
[connection signal="pressed" from="BattleGUI/GUI/Buttons/NormalAttack" to="." method="_on_NormalAttack_pressed"]

[editable path="BattleGUI"]
